enlazando link del repositorio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li>Programación 1</li>
                 <li>
                     <!-- Reemplazar por el link del repositorio de GitHub -->
-                    <a href="#">URL del repo de GitHub</a>
+                    <a href="https://github.com/agusyutas/parcial-1.git">https://github.com/agusyutas/parcial-1.git</a>
                 </li>
             </ul>
         </footer>
